# Computational_workshop

./: README.md  diffusion1.cpp
Lab1/: CMakeLists.txt  plot.py
Lab1/examples/: CMakeLists.txt  main.cpp
Lab1/examples/Lab2/: fem.cpp  fvm.cpp
Lab1/examples/Lab2/meshes/: 2.msh
Lab1/examples/Lab2/results/: mesh.vtk
Lab1/examples/results/: fem_mesh_2.vtk  mesh_2.vtk
Lab1/src/: CMakeLists.txt  main.cpp
Lab1/src/fem/: Parametrisation.hpp
Lab1/src/fem/assembly/: Integration.hpp  MatrixAssembly.hpp
Lab1/src/fem/finite elements/: FiniteElements.hpp
Lab1/src/fem/finite_elements/: FiniteElements.hpp
Lab1/src/function_traits/: Extractions.hpp
Lab1/src/fvm/: Scheme.cpp  Scheme.hpp
Lab1/src/fvm/flux_calculation/: TPFA.hpp
Lab1/src/integration/: Gaussian.hpp  Node.hpp  Quadrature.hpp
Lab1/src/mesh/: MeshUtils.cpp  MeshUtils.hpp
Lab1/src/types/: BasicTypes.hpp  MeshTypes.hpp
Lab1/test/: CMakeLists.txt
Lab1/test/fem_tests/: test_cell_parametrisation.cpp  test_integrals_over_cell.cpp  test_matrix_assembly.cpp
computing_lib/: .gitignore  CMakeLists.txt  run.py
computing_lib/examples/: CMakeLists.txt
computing_lib/examples/Lab1/: main.cpp
computing_lib/examples/Lab2/: TestFucntions.hpp  fem.cpp  fvm.cpp
computing_lib/examples/Lab2/meshes/: mesh_small.msh  ventrical.geo  ventrical_2.msh
computing_lib/examples/Lab2/results/: mesh_1.vtk  mesh_2.vtk
computing_lib/examples/Lab3/: dynamic_problem.cpp
computing_lib/examples/results/: fem_mesh_2.vtk  mesh.vtk  mesh_1.vtk
computing_lib/src/: CMakeLists.txt
computing_lib/src/auxilary/: SchemeParameters.hpp
computing_lib/src/fem/: Parametrisation.hpp
computing_lib/src/fem/assembly/: Integration.hpp  MatrixAssembly.hpp  Utils.hpp
computing_lib/src/fem/finite_elements/: FiniteElements.hpp
computing_lib/src/fem/time_discretisation/: ImplicitEuler.hpp  TimeDiscretisation.hpp
computing_lib/src/fvm/flux_calculation/: FluxCalculationMetod.hpp  TPFA.cpp
computing_lib/src/integration/: Quadrature.hpp
computing_lib/src/mesh/: MeshUtils.hpp
computing_lib/src/types/: BasicTypes.hpp  MeshTypes.hpp
computing_lib/test/: CMakeLists.txt
computing_lib/test/fem_tests/: test_cell_parametrisation.cpp  test_integrals_over_cell.cpp  test_matrix_assembly.cpp
computing_lib/test/mesh/: test_INMOST_understanding.cpp
res_lab_2/: plot_2.py
ventrical_mesh/: 3.msh  5.msh  mesh_convert.sh  ventrical.geo  ventrical_1.msh
